NAS-116300: Fixed overflow-y (#6715)

--- a/src/app/pages/common/error-dialog/error-dialog.component.scss
+++ b/src/app/pages/common/error-dialog/error-dialog.component.scss
@@ -12,3 +12,7 @@
   display: flex;
   flex-direction: column-reverse;
 }
+
+#err-md-content {
+  overflow-y: auto !important;
+}
